Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyszXkyPMlpb5FjZdMwPwa",
+      "authorship_tag": "ABX9TyM25apIV3pozGr3UOAgm5pp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,9 +73,9 @@
       "source": [
         "# haskell(ghc)のインストール\n",
         "%%capture\n",
-        "!apt install ghc"
+        "!apt install haskell-platform"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -85,18 +85,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a48a29f-ec31-447b-fb1b-6de823aa8455"
+        "outputId": "ed23d246-69fe-487d-e5bd-790c082b1319"
       },
       "source": [
         "# インストールされたことの確認\n",
         "!ghc --version"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/bin/bash: ghc: command not found\n"
+            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
           ],
           "name": "stdout"
         }
@@ -158,14 +158,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eebba1d2-f09d-4825-ada2-44e350d8e3ea"
+        "outputId": "3ad3371a-afee-4062-d9fc-5d59811f3fe5"
       },
       "source": [
         "# シェル(コマンドラインワンライナー)で実行する\n",
-        "# 便利なので多用するかもしれない\n",
+        "# 便利なので多用する\n",
         "!ghc -e 'putStrLn \"hello world!\"'"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "%%script false\r\n",
         "!ghc -e \"interact (unlines.map reverse.lines)\""
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -196,18 +196,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6a2bc6b7-bfd4-4578-8db1-cb084c2cd70a"
+        "outputId": "f47cf60a-0ee0-4153-d75b-93412ecc1caf"
       },
       "source": [
         "# echo と getContents を使う\r\n",
-        "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  print . unlines .map reverse.lines\"\r\n"
+        "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  print . unlines .map reverse.lines\"\r\n",
+        "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  mapM_ putStrLn . map reverse.lines\""
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\"nep a si siht\\nfedcba \\n54321\\n\"\n"
+            "\"nep a si siht\\nfedcba \\n54321\\n\"\n",
+            "nep a si siht\n",
+            "fedcba \n",
+            "54321\n"
           ],
           "name": "stdout"
         }
@@ -309,7 +313,9 @@
         "id": "1hE1az0p-JCH"
       },
       "source": [
-        "Haskell は関数のカッコはあってもよいが省略可能。\n"
+        "Haskell は関数のカッコは省略可能だが、場合によっては必要。\n",
+        "\n",
+        "`$`による省略も便利なので使うが、エラーの原因にもなるので注意。\n"
       ]
     },
     {
@@ -319,7 +325,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2fc3ae47-3a1b-4ac2-d77d-f197248790cc"
+        "outputId": "7b2c36d8-62b3-44b1-bd3d-5d4f100bd6c2"
       },
       "source": [
         "%%writefile if01.hs\n",
@@ -327,12 +333,12 @@
         "  let fac n = if n == 0 then 1 else n * fac (n-1)  \n",
         "  in print ( fac 42 )"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting if01.hs\n"
+            "Writing if01.hs\n"
           ],
           "name": "stdout"
         }
@@ -345,12 +351,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7571c8b3-f86b-4d7b-b4ce-dfc91f41ef54"
+        "outputId": "a58ea9b0-66a9-41db-f09b-ed2287f26ee8"
       },
       "source": [
         "!runghc if01.hs"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,6 +493,15 @@
       },
       "source": [
         "# 四則演算"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H4Y3T3JvG3nZ"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -5864,17 +5879,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "NFgA8axBsc1w",
-        "outputId": "2a52970a-7f5b-479b-9f97-d9264e003d5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2a52970a-7f5b-479b-9f97-d9264e003d5c"
       },
       "source": [
         "# パターンマッチングで sum を実装する\r\n",
         "# コマンドラインワンライナーバージョン\r\n",
         "!ghc -e $'let {sum01 :: (Num a) => [a] -> a; sum01 [] = 0; sum01 (x:xs) = x + sum01 xs } in print $ sum [1,2,3]'"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
