Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyME2plQa6CqJSZGqXJbFlaA",
+      "authorship_tag": "ABX9TyNid1GUbDTqTLSyOkV1U3VQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "# インストールされたことの確認\n",
         "!ghc --version"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
         "# 便利なので多用する\n",
         "!ghc -e 'putStrLn \"hello world!\"'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "%%script false\r\n",
         "!ghc -e \"interact (unlines.map reverse.lines)\""
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
         "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  print . unlines .map reverse.lines\"\r\n",
         "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  mapM_ putStrLn . map reverse.lines\""
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +333,7 @@
         "  let fac n = if n == 0 then 1 else n * fac (n-1)  \n",
         "  in print ( fac 42 )"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +356,7 @@
       "source": [
         "!runghc if01.hs"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,7 +923,7 @@
         "!echo $'this\\nis' | ghc -e 'getLine'\r\n",
         "!echo $'this\\nis' | ghc -e 'getContents >>= print . lines'"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -955,7 +955,7 @@
         "!echo\r\n",
         "!echo $'this\\nis' | ghc -e 'do {x <- getContents ; mapM_ print (lines(x))}'"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -970,15 +970,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "naglzSkfPDan"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -1234,13 +1225,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dKuX6fpolRY2"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dFGoBpsu-Psz"
       },
       "source": [
-        "# コマンドラインワンライナーでリスト内包表記は使えるか\r\n",
-        "# => 使えないと思う。\r\n"
+        "# コマンドラインワンライナーでリスト内包表記は使えるか => 使える\r\n",
+        "!ghc -e '[x^2 | x <- [1..10]]'"
       ],
       "execution_count": null,
       "outputs": []
