Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPMGfhNIYHKFxHz5NDHTYj9",
+      "authorship_tag": "ABX9TyP5lH8QUt6lwHd/0x5HHC7E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1460,6 +1460,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "qCNsBQUlbIN_"
+      },
+      "source": [
+        "%%capture\r\n",
+        "!apt install haskell-platform"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "zwm1LnWFa-S1",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1468,7 +1480,6 @@
       },
       "source": [
         "!echo $'1\\n2\\n3' | ghc -e \":t lines <$> getContents\"\r\n",
-        "\r\n",
         "!echo\r\n",
         "!echo $'1\\n2\\n3' | ghc -e \"getContents >>= print.lines\"\r\n",
         "!echo\r\n",
@@ -1486,6 +1497,32 @@
             "\n",
             "lines <$> getContents :: IO [String]\n",
             "(getContents >>= print.lines) :: IO ()\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t_1LrKmAduhI",
+        "outputId": "970c3d47-6f17-4479-ba71-2a3731575bbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e $':t (>>=)'\r\n",
+        "!ghc -e $'do {:t (->)}'"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>=) :: Monad m => m a -> (a -> m b) -> m b\n",
+            "\n",
+            "<interactive>:0:5: error: parse error on input ‘:’\n"
           ],
           "name": "stdout"
         }
@@ -1838,7 +1875,7 @@
         "!ghc -e ':k Fractional'\r\n",
         "!ghc -e ':k Num'\r\n",
         "!ghc -e ':k Integral'\r\n",
-        "\r\n",
+        "!echo\r\n",
         "# アプリカティブ、ファンクター、モナド\r\n",
         "!ghc -e ':t (*)'\r\n",
         "!ghc -e ':t (<*>)'\r\n",
@@ -1849,8 +1886,7 @@
         "# IOアクションの -> はタイプを取り出せない\r\n",
         "# printの型の逆と思われる\r\n",
         "# print :: Show a => a -> IO ()\r\n",
-        "#!ghc -e ':t (->))'\r\n",
-        "\r\n"
+        "#!ghc -e ':t (->))'"
       ],
       "execution_count": null,
       "outputs": []
