Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNZiJAZqr4vTHWfqX/j3H8B",
+      "authorship_tag": "ABX9TyMLTVygi9fxzD3QCU9tk957",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1457,7 +1457,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1589,7 +1589,7 @@
       "source": [
         "!ghc -e \"let x = 1; y = 2 in x+y\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,15 +1604,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "C0TgtF1D4ZeL",
-        "outputId": "bae9febd-00ba-4012-9a29-2461a8f747bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bae9febd-00ba-4012-9a29-2461a8f747bc"
       },
       "source": [
         "!ghc -e \"let {x = 1; y = 2} in x+y\"\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1627,15 +1627,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "eJNxfqPB4jGR",
-        "outputId": "52aef52d-aa3e-4ba3-b2b9-98f2ea643d35",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "52aef52d-aa3e-4ba3-b2b9-98f2ea643d35"
       },
       "source": [
         "!ghc -e \"do {let x = 1; y = 2 in x+y}\""
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1684,15 +1684,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "DKODrRuq-gbE",
-        "outputId": "aab3ed7f-7e97-4ea1-92c8-56fbf8e14007",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aab3ed7f-7e97-4ea1-92c8-56fbf8e14007"
       },
       "source": [
         "!ghc -e $'Data.List.sort([3,1,2])'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1704,28 +1704,19 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mT9CJYD9_KWR"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "NgXPOOkv_PBR",
-        "outputId": "98ec098b-af07-41a9-9151-e17ec225a68d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "98ec098b-af07-41a9-9151-e17ec225a68d"
       },
       "source": [
         "!ghc -e $'pi'\n",
         "!ghc -e $'exp(1)'"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1801,6 +1792,45 @@
           "output_type": "stream",
           "text": [
             "[\"hello\",\"hello\",\"hello\",\"hello\",\"hello\"]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0DyTBh1cs5wg"
+      },
+      "source": [
+        "%%capture\n",
+        "!apt install haskell-platform"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pMB4Chk5tGbE",
+        "outputId": "44b0af1f-0b92-4545-bdf3-d617ffa8144f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e $'replicate 5 5'\n",
+        "!ghc -e $'replicate 5 [5]'\n",
+        "!ghc -e $'replicate 5 \\'x\\''"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[5,5,5,5,5]\n",
+            "[[5],[5],[5],[5],[5]]\n",
+            "\"xxxxx\"\n"
           ],
           "name": "stdout"
         }
@@ -1972,7 +2002,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uveus_IVNwiq"
+        "id": "uveus_IVNwiq",
+        "outputId": "f3f9237d-c24b-4521-d542-ed1e63fc8317",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# カインドと型クラス\r\n",
@@ -1989,12 +2023,31 @@
         "!ghc -e ':t (=<<)'\r\n",
         "\r\n",
         "# IOアクションの -> はタイプを取り出せない\r\n",
-        "# printの型の逆と思われる\r\n",
-        "# print :: Show a => a -> IO ()\r\n",
-        "#!ghc -e ':t (->))'"
+        "# !ghc -e ':t (->))'\r\n",
+        "# 1. do 節の中で IO から IO でない文字列へ変換して変数に代入する\r\n",
+        "# 2. リスト内包表記の中で、範囲から中身を取り出す\r\n",
+        "# 3. case文の中で、場合分けの結果を表示する\r\n",
+        "# 4. 関数定義で、引数と引数の間、引数と返り値の間を示す。\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Maybe :: * -> *\n",
+            "Fractional :: * -> Constraint\n",
+            "Num :: * -> Constraint\n",
+            "Integral :: * -> Constraint\n",
+            "\n",
+            "(*) :: Num a => a -> a -> a\n",
+            "(<*>) :: Applicative f => f (a -> b) -> f a -> f b\n",
+            "(<$>) :: Functor f => (a -> b) -> f a -> f b\n",
+            "(>>=) :: Monad m => m a -> (a -> m b) -> m b\n",
+            "(=<<) :: Monad m => (a -> m b) -> m a -> m b\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2014,6 +2067,33 @@
           "output_type": "stream",
           "text": [
             "print :: Show a => a -> IO ()\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GdN5W8GFvI0h",
+        "outputId": "4a880e84-44da-4607-c1ac-05b1120541c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e $':t (=>)'\n",
+        "!ghc -e $':t (->)'"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:1:2: error: parse error on input ‘=>’\n",
+            "\n",
+            "<interactive>:1:2: error: parse error on input ‘->’\n"
           ],
           "name": "stdout"
         }
@@ -2097,6 +2177,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gVdAQ4dnv-uS"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
