Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPQ7IulnPBJkRYUQPZjTe4j",
+      "authorship_tag": "ABX9TyPCpFRMgifqrcggPKGEvyg0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3841,7 +3841,7 @@
         "    let x = b ++ [[1,1,1,1]] where b = [[1,2,3,4],[5,3,3,3],[1,2,2,3,4],[1,2,3]]\n",
         "    print x"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3864,7 +3864,7 @@
       "source": [
         "!runghc list02.hs"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4078,15 +4078,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "scv3bPba33Zh",
-        "outputId": "062c6e55-fcc4-4917-d902-ebf709f06580",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "062c6e55-fcc4-4917-d902-ebf709f06580"
       },
       "source": [
         "!ghc -e 'Data.List.sort [5,4,3,2,1] '"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4327,7 +4327,7 @@
         "!echo\n",
         "!ghc -e 'replicate 3 10'"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4426,15 +4426,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TEAugixo5MRb"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -4503,6 +4494,40 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oU9sVB_wC-N3",
+        "outputId": "c2d6e1f0-57e7-422d-c0e2-7befa37b2f2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e '[ (x, y) | x <- [2,5,10], y <- [8,10,11]] '\r\n",
+        "!ghc -e '[ [x, y] | x <- [2,5,10], y <- [8,10,11]] '"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(2,8),(2,10),(2,11),(5,8),(5,10),(5,11),(10,8),(10,10),(10,11)]\n",
+            "[[2,8],[2,10],[2,11],[5,8],[5,10],[5,11],[10,8],[10,10],[10,11]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TEAugixo5MRb"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
