Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOWshB4yGve1OMN3gGAq/6N",
+      "authorship_tag": "ABX9TyOEKMvywbIHWhtVIS9l2NBL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2908,6 +2908,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G8XTKwv4sIpR"
+      },
+      "source": [
+        "例えば次の Data.Map というライブラリーは import するか、ライブラリー名をつけて関数を使うかしないと使えないが、パッケージは containers にあって、それは ghc にはじめからインストールされている。"
+      ]
     },
     {
       "cell_type": "code",
