Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOEKMvywbIHWhtVIS9l2NBL",
+      "authorship_tag": "ABX9TyOCB4nPHyVIcenpBlLjblIU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6707,57 +6707,129 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KXhYgVI7wjRR"
+      },
+      "source": [
+        "アズパターンはあとマークをパターンの前に置く。 パターンと名前を紐付けるもので便利に使える。\r\n",
+        "\r\n",
+        "例えば `xs@(x:y:ys)` と書くと `(x:y:ys)` の代わりに `xs` が使える。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y9PPrqkDxQKO",
+        "outputId": "6455bdf8-80f2-454c-81ff-d3d7d1f61337",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo '' | ghc -e $'getContents >>= let{capital::String->String; capital \"\" = \"Empty string, whoops!\"; capital all@(x:xs) =\"The first letter of \" ++ all ++ \" is \"++ [x];} in putStrLn.capital.concat. lines'"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Empty string, whoops!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b4smYce47GW5",
+        "outputId": "65577c43-64b4-4a47-b7f3-bdb9f634a924",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo 'Dracula' | ghc -e $'getContents >>= let{capital::String->String; capital \"\" = \"Empty string, whoops!\"; capital all@(x:xs) =\"The first letter of \" ++ all ++ \" is \"++ [x];} in putStrLn.capital.concat. lines'"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The first letter of Dracula is D\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MPWGIk0Q8EDH"
+      },
+      "source": [
+        "# ガード guard\r\n",
+        "\r\n",
+        "条件分岐にパターンマッチング、if、case、guard、がある。 たぶんどれも代用できるかもしれないので、読みやすさのためにあると思われる。 他言語との行き来を考えると、if と case だけを使うのがいいかもしれない。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FWrgQwbO9sOJ"
+      },
+      "source": [
+        "# 次のようなあまりよくない関数を考える\r\n",
+        "%%script false\r\n",
+        "bmiTell :: (RealFloat a) => a -> String  \r\n",
+        "bmiTell bmi  \r\n",
+        "   | bmi <= 18.5 = \"You're underweight, you emo, you!\"  \r\n",
+        "   | bmi <= 25.0 = \"You're supposedly normal. Pffft, I bet you're ugly!\"  \r\n",
+        "   | bmi <= 30.0 = \"You're fat! Lose some weight, fatty!\"  \r\n",
+        "   | otherwise   = \"You're a whale, congratulations!\"  "
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5o2c8bFk-a2W",
+        "outputId": "e29b2ccf-5e3b-4140-e83e-0d4024c1e46e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo $'25.0' | ghc -e $'getContents >>= let{bmiTell bmi | otherwise  = \"You\\'re a whale!\";} in print.bmiTell.(read::String->Float).concat.lines'"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"You're a whale!\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2vLwUUBYATpQ"
+      },
+      "source": [
+        "# いまここ2"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "OlVrf4xGQLhh"
       },
       "source": [
-        "\r\n",
-        "Let's implement sum. We know that the sum of an empty list is\r\n",
-        "0. We write that down as a pattern. And we also know that the\r\n",
-        "sum of a list is the head plus the sum of the rest of the list.\r\n",
-        "So if we write that down, we get:\r\n",
-        "\r\n",
-        "sum' :: (Num a) => [a] -> a  \r\n",
-        "sum' [] = 0  \r\n",
-        "sum' (x:xs) = x + sum' xs  \r\n",
-        "There's also a thing called as patterns. Those are a handy way\r\n",
-        "of breaking something up according to a pattern and binding\r\n",
-        "it to names whilst still keeping a reference to the whole thing.\r\n",
-        "You do that by putting a name and an @ in front of a pattern.\r\n",
-        "For instance, the pattern xs@(x:y:ys). This pattern will match\r\n",
-        "exactly the same thing as x:y:ys but you can easily get the\r\n",
-        "whole list via xs instead of repeating yourself by typing out\r\n",
-        "x:y:ys in the function body again. Here's a quick and dirty\r\n",
-        "example:\r\n",
-        "\r\n",
-        "capital :: String -> String  \r\n",
-        "capital \"\" = \"Empty string, whoops!\"  \r\n",
-        "capital all@(x:xs) = \"The first letter of \" ++ all ++ \" is \"\r\n",
-        "++ [x]  \r\n",
-        "ghci> capital \"Dracula\"  \r\n",
-        "\"The first letter of Dracula is D\"  \r\n",
-        "Normally we use as patterns to avoid repeating ourselves when\r\n",
-        "matching against a bigger pattern when we have to use the whole\r\n",
-        "thing again in the function body.\r\n",
-        "\r\n",
-        "One more thing — you can't use ++ in pattern matches. If you\r\n",
-        "tried to pattern match against (xs ++ ys), what would be in\r\n",
-        "the first and what would be in the second list? It doesn't make\r\n",
-        "much sense. It would make sense to match stuff against (xs \r\n",
-        "++ [x,y,z]) or just (xs ++ [x]), but because of the nature of\r\n",
-        "lists, you can't do that.\r\n",
-        "\r\n",
-        "Guards, guards!\r\n",
-        "guards\r\n",
-        "Whereas patterns are a way of making sure a value conforms to\r\n",
-        "some form and deconstructing it, guards are a way of testing\r\n",
-        "whether some property of a value (or several of them) are true\r\n",
-        "or false. That sounds a lot like an if statement and it's very\r\n",
-        "similar. The thing is that guards are a lot more readable when\r\n",
-        "you have several conditions and they play really nicely with\r\n",
-        "patterns.\r\n",
-        "\r\n",
         "Instead of explaining their syntax, let's just dive in and make\r\n",
         "a function using guards. We're going to make a simple function\r\n",
         "that berates you differently depending on your BMI (body mass\r\n",
@@ -6771,8 +6843,7 @@
         "bmiTell :: (RealFloat a) => a -> String  \r\n",
         "bmiTell bmi  \r\n",
         "   | bmi <= 18.5 = \"You're underweight, you emo, you!\"  \r\n",
-        "   | bmi <= 25.0 = \"You're supposedly normal. Pffft, I bet you're\r\n",
-        "ugly!\"  \r\n",
+        "   | bmi <= 25.0 = \"You're supposedly normal. Pffft, I bet you're ugly!\"  \r\n",
         "   | bmi <= 30.0 = \"You're fat! Lose some weight, fatty!\"  \r\n",
         "   | otherwise   = \"You're a whale, congratulations!\"  \r\n",
         "Guards are indicated by pipes that follow a function's name and\r\n",
