Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMfUIh55wW+PcX9QAw2oz2K",
+      "authorship_tag": "ABX9TyPvC/bPghnzxT8hgZ84hB6T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6799,23 +6799,96 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "97ad848c-6f00-477c-bdd3-20165ca07f56"
+        "outputId": "18f0b78a-78d8-41da-a496-29c41e31bca0"
       },
       "source": [
-        "!echo $'18.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in print.bmiTell.(read::String->Float).concat.lines'\r\n",
-        "!echo $'25.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in print.bmiTell.(read::String->Float).concat.lines'\r\n",
-        "!echo $'28.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in print.bmiTell.(read::String->Float).concat.lines'\r\n",
-        "!echo $'50.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in print.bmiTell.(read::String->Float).concat.lines'"
+        "!echo $'18.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in putStrLn.bmiTell.(read::String->Float).concat.lines'\r\n",
+        "!echo $'25.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in putStrLn.bmiTell.(read::String->Float).concat.lines'\r\n",
+        "!echo $'28.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in putStrLn.bmiTell.(read::String->Float).concat.lines'\r\n",
+        "!echo $'50.0' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in putStrLn.bmiTell.(read::String->Float).concat.lines'"
       ],
-      "execution_count": 48,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\"You're underweight, you emo, you!\"\n",
-            "\"You're supposedly normal.\"\n",
-            "\"You're fat!\"\n",
-            "\"You're a whale!\"\n"
+            "You're underweight, you emo, you!\n",
+            "You're supposedly normal.\n",
+            "You're fat!\n",
+            "You're a whale!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KfYUDSJkkLHo"
+      },
+      "source": [
+        "# 身長と体重を入力すると bmi を計算するように変更する\r\n",
+        "%%script false\r\n",
+        "bmiTell :: (RealFloat a) => a -> a -> String  \r\n",
+        "bmiTell weight height  \r\n",
+        "   | weight / height ^ 2 <= 18.5 = \"You're underweight, youemo, you!\"  \r\n",
+        "   | weight / height ^ 2 <= 25.0 = \"You're supposedly normal.Pffft, I bet you're ugly!\"  \r\n",
+        "   | weight / height ^ 2 <= 30.0 = \"You're fat! Lose some weight,fatty!\"  \r\n",
+        "   | otherwise                 = \"You're a whale, congratulations!\"  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dfzkJZpYkkcJ",
+        "outputId": "16303c9a-2751-4e7c-fa81-594f6634806d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo $'85 1.90' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->String; bmiTell bmi | bmi <= 18.5 = \"You\\'re underweight, you emo, you!\" | bmi <= 25.0 = \"You\\'re supposedly normal.\" | bmi <= 30.0 = \"You\\'re fat!\" | otherwise  = \"You\\'re a whale!\";} in print.bmiTell.map (read::String->Float).words.concat.lines'\r\n"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:0:238: error:\n",
+            "    • No instance for (RealFloat [Float])\n",
+            "        arising from a use of ‘bmiTell’\n",
+            "    • In the first argument of ‘(.)’, namely ‘bmiTell’\n",
+            "      In the second argument of ‘(.)’, namely\n",
+            "        ‘bmiTell . map (read :: String -> Float) . words . concat . lines’\n",
+            "      In the expression:\n",
+            "        print\n",
+            "        . bmiTell . map (read :: String -> Float) . words . concat . lines\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4snmUBZ2lN4U",
+        "outputId": "e0fd4767-4938-48cb-c30f-b257440557ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo $'85 1.90' | ghc -e $'getContents >>= let{bmiTell weight height | otherwise = \"a whale\";} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"a whale\"\n"
           ],
           "name": "stdout"
         }
@@ -6847,10 +6920,9 @@
         "   | weight / height ^ 2 <= 18.5 = \"You're underweight, youemo, you!\"  \r\n",
         "   | weight / height ^ 2 <= 25.0 = \"You're supposedly normal.\r\n",
         "Pffft, I bet you're ugly!\"  \r\n",
-        "   | weight / height ^ 2 <= 30.0 = \"You're fat! Lose some weight,\r\n",
-        "fatty!\"  \r\n",
-        "   | otherwise                 = \"You're a whale, congratulations\r\n",
-        "!\"  \r\n",
+        "   | weight / height ^ 2 <= 30.0 = \"You're fat! Lose some weight,fatty!\"  \r\n",
+        "   | otherwise                 = \"You're a whale, congratulations!\"  \r\n",
+        "   \r\n",
         "Let's see if I'm fat ...\r\n",
         "\r\n",
         "ghci> bmiTell 85 1.90  \r\n",
